@@ -14,45 +14,35 @@ def xercesUrl = 'https://repo1.maven.org/maven2/xerces/xercesImpl/2.6.1/xercesIm
 def xercesLib = './xercesImpl-2.6.1.jar'
 
 def poijobs = [
-        [ name: 'POI-DSL-1.8', trigger: 'H */12 * * *'
+        [ name: 'POI-DSL-1.8', trigger: 'H */12 * * *', jenkinsLite: true
         ],
         [ name: 'POI-DSL-OpenJDK', jdk: 'OpenJDK 1.8', trigger: 'H */12 * * *',
           // only a limited set of nodes still have OpenJDK 8 (on Ubuntu) installed
           slaves: 'ubuntu',
-          skipcigame: true
+          skipcigame: true,
+          jenkinsLite: true,
+          // OpenJDK 1.8 is not available on the Apache CI any more
+          disabled: true
         ],
-//        [ name: 'POI-DSL-1.10', jdk: '1.10', trigger: triggerSundays, skipcigame: true,
-//          // let's save some CPU cycles here, 10 had EOL in September 2018
-//          disabled: true
-//        ],
         [ name: 'POI-DSL-1.11', jdk: '1.11', trigger: triggerSundays, skipcigame: true
-        ],
-//        [ name: 'POI-DSL-1.12', jdk: '1.12', trigger: triggerSundays, skipcigame: true,
-//          // let's save some CPU cycles here, 12 is not a LTS and JDK 13 is GA as of 17 September 2019
-//          disabled: true
-//        ],
-//        [ name: 'POI-DSL-1.13', jdk: '1.13', trigger: triggerSundays, skipcigame: true,
-//          // let's save some CPU cycles here, 13 is not a LTS and JDK 14 is GA as of 17 March 2020
-//          disabled: true
-//        ],
-//        [ name: 'POI-DSL-1.14', jdk: '1.14', trigger: triggerSundays, skipcigame: true,
-//          // let's save some CPU cycles here, 14 is not a LTS and JDK 15 is GA as of 15 September 2020
-//          disabled: true
-//        ],
-        [ name: 'POI-DSL-1.15', jdk: '1.15', trigger: triggerSundays, skipcigame: true,
-          // let's save some CPU cycles here, 15 is not a LTS and JDK 16 is GA
-          disabled: true
-        ],
-        [ name: 'POI-DSL-1.16', jdk: '1.16', trigger: 'H */12 * * *', skipcigame: true,
-          // let's save some CPU cycles here, 16 is not a LTS and JDK 17 is GA
-          disabled: true
         ],
         [ name: 'POI-DSL-1.17', jdk: '1.17', trigger: 'H */12 * * *', skipcigame: true
         ],
-        [ name: 'POI-DSL-1.18', jdk: '1.18', trigger: triggerSundays, skipcigame: true
+        // Jenkins on ci-builds.apache.org does not support spotbugs with a new enough version of asm for Java18+
+        [ name: 'POI-DSL-1.21', jdk: '1.21', trigger: 'H */12 * * *', skipcigame: true, skipSpotbugs: true
         ],
-        // Use Ant build for as Gradle 7.5 does not support Java 19 yet (change to gradle: true when we have Gradle support)
-        [ name: 'POI-DSL-1.19', jdk: '1.19', trigger: triggerSundays, skipcigame: true, useAnt: true
+        // Jenkins on ci-builds.apache.org does not support spotbugs with a new enough version of asm for Java18+
+        [ name: 'POI-DSL-1.22', jdk: '1.22', trigger: triggerSundays, skipcigame: true, skipSpotbugs: true
+        ],
+        // Jenkins on ci-builds.apache.org does not support spotbugs with a new enough version of asm for Java18+
+        [ name: 'POI-DSL-1.23', jdk: '1.23', trigger: triggerSundays, skipcigame: true, skipSpotbugs: true
+        ],
+        // Jenkins on ci-builds.apache.org does not support spotbugs with a new enough version of asm for Java18+
+        [ name: 'POI-DSL-1.24', jdk: '1.24', trigger: triggerSundays, skipcigame: true, skipSpotbugs: true,
+          // use Ant for building until Gradle supports JDK 24
+          // see https://docs.gradle.org/current/userguide/compatibility.html
+          // and https://github.com/gradle/gradle/issues/31625
+          useAnt: true
         ],
         // Use Ant-build for now as selecting IBM JDK via toolchain does not work (yet)
         [ name: 'POI-DSL-IBM-JDK', jdk: 'IBMJDK', trigger: triggerSundays, skipcigame: true, useAnt: true
@@ -83,34 +73,28 @@ def poijobs = [
 //		  // replaced by Gradle-based build now
 //		  disabled: true
 //        ],
-        [ name: 'POI-DSL-SonarQube-Gradle', jdk: '1.11', trigger: 'H 7 * * *', sonar: true, skipcigame: true
+        [ name: 'POI-DSL-SonarQube-Gradle', jdk: '1.17', trigger: 'H 7 * * *', sonar: true, skipcigame: true
         ],
-        [ name: 'POI-DSL-Windows-1.8', trigger: 'H */12 * * *', windows: true, slaves: 'Windows'
+        [ name: 'POI-DSL-Windows-1.8', trigger: 'H */12 * * *', windows: true, slaves: 'Windows', jenkinsLite: true
         ],
-//        [ name: 'POI-DSL-Windows-1.12', jdk: '1.12', trigger: triggerSundays, windows: true, slaves: 'Windows', skipcigame: true,
-//          // let's save some CPU cycles here, 12 is not a LTS and JDK 13 is GA now
-//          disabled: true
-//        ],
-//        [ name: 'POI-DSL-Windows-1.14', jdk: '1.14', trigger: triggerSundays, windows: true, slaves: 'Windows', skipcigame: true,
-//		  // let's only verify the latest two JDKs
-//		  disabled: true
-//        ],
-        [ name: 'POI-DSL-Windows-1.15', jdk: '1.15', trigger: triggerSundays, windows: true, slaves: 'Windows', skipcigame: true,
-          // let's save some CPU cycles here, 14 is not a LTS and JDK 15 is GA as of 15 September 2020
-          disabled: true
-        ],
-        [ name: 'POI-DSL-Windows-1.16', jdk: '1.16', trigger: 'H */12 * * *', windows: true, slaves: 'Windows', skipcigame: true,
-          // let's save some CPU cycles here, 16 is not a LTS and JDK 17 is GA
-          disabled: true
+        [ name: 'POI-DSL-Windows-1.11', jdk: '1.11', trigger: triggerSundays, windows: true, slaves: 'Windows',
+          jenkinsLite: true
         ],
         [ name: 'POI-DSL-Windows-1.17', jdk: '1.17', trigger: 'H */12 * * *', windows: true, slaves: 'Windows', skipcigame: true
         ],
-        [ name: 'POI-DSL-Windows-1.18', jdk: '1.18', trigger: triggerSundays, windows: true, slaves: 'Windows', skipcigame: true
+        [ name: 'POI-DSL-Windows-1.21', jdk: '1.21', trigger: 'H */12 * * *', windows: true, slaves: 'Windows', skipcigame: true
         ],
-        [ name: 'POI-DSL-Github-PullRequests', trigger: '', githubpr: true, skipcigame: true,
-          // ensure the file which is needed from the separate documentation module does exist
-          // as we are checking out from git, we do not have the reference checked out here
-          addShell: 'mkdir -p src/documentation\ntouch src/documentation/RELEASE-NOTES.txt'
+        [ name: 'POI-DSL-Windows-1.22', jdk: '1.22', trigger: triggerSundays, windows: true, slaves: 'Windows', skipcigame: true
+        ],
+        [ name: 'POI-DSL-Windows-1.23', jdk: '1.23', trigger: triggerSundays, windows: true, slaves: 'Windows', skipcigame: true
+        ],
+        [ name: 'POI-DSL-Windows-1.24', jdk: '1.24', trigger: triggerSundays, windows: true, slaves: 'Windows', skipcigame: true,
+          // use Ant for building until Gradle supports JDK 24
+          // see https://docs.gradle.org/current/userguide/compatibility.html
+          // and https://github.com/gradle/gradle/issues/31625
+          useAnt: true
+        ],
+        [ name: 'POI-DSL-Github-PullRequests', trigger: '', skipcigame: true, disabled: true
         ],
 ]
 
@@ -119,15 +103,27 @@ def xmlbeansjobs = [
         ],
         [ name: 'POI-XMLBeans-DSL-1.11', jdk: '1.11', trigger: triggerSundays, skipcigame: true,
         ],
-        [ name: 'POI-XMLBeans-DSL-1.16', jdk: '1.16', trigger: triggerSundays, skipcigame: true,
-          // let's save some CPU cycles here, 16 is not a LTS and JDK 17 is GA
-          disabled: true
-        ],
-        [ name: 'POI-XMLBeans-DSL-1.17', jdk: '1.17', trigger: triggerSundays, skipcigame: true,
+        [ name: 'POI-XMLBeans-DSL-1.17', jdk: '1.17', trigger: 'H */12 * * *', skipcigame: true,
         ],
         [ name: 'POI-XMLBeans-DSL-1.18', jdk: '1.18', trigger: triggerSundays, skipcigame: true,
+          // let's save some CPU cycles here, 18 is not an LTS and JDK 20 is out
+          disabled: true
         ],
-        [ name: 'POI-XMLBeans-DSL-Sonar', jdk: '1.11', trigger: triggerSundays, skipcigame: true,
+        [ name: 'POI-XMLBeans-DSL-1.19', jdk: '1.19', trigger: triggerSundays, skipcigame: true,
+          // let's save some CPU cycles here, 19 is not an LTS
+          disabled: true
+        ],
+        [ name: 'POI-XMLBeans-DSL-1.20', jdk: '1.20', trigger: triggerSundays, skipcigame: true,
+          // let's save some CPU cycles here, 20 is not an LTS and JDK 21 is out
+          disabled: true
+        ],
+        [ name: 'POI-XMLBeans-DSL-1.21', jdk: '1.21', trigger: 'H */12 * * *', skipcigame: true,
+        ],
+        [ name: 'POI-XMLBeans-DSL-1.22', jdk: '1.22', trigger: triggerSundays, skipcigame: true,
+        ],
+        [ name: 'POI-XMLBeans-DSL-1.23', jdk: '1.23', trigger: triggerSundays, skipcigame: true,
+        ],
+        [ name: 'POI-XMLBeans-DSL-Sonar', jdk: '1.17', trigger: triggerSundays, skipcigame: true,
           sonar: true
         ]
 ]
@@ -145,17 +141,16 @@ def defaultMaven = 'maven_3_latest'
 def defaultSlaves = '(ubuntu)&&!beam&&!cloud-slave&&!H29'
 
 def jdkMapping = [
-        '1.8': [ jenkinsJdk: 'jdk_1.8_latest', jdkVersion: 8, jdkVendor: 'oracle' ],
-        '1.10': [ jenkinsJdk: 'jdk_10_latest', jdkVersion: 10, jdkVendor: 'oracle' ],
-        '1.11': [ jenkinsJdk: 'jdk_11_latest', jdkVersion: 11, jdkVendor: 'oracle' ],
-        '1.12': [ jenkinsJdk: 'jdk_12_latest', jdkVersion: 12, jdkVendor: '' ],
-        '1.13': [ jenkinsJdk: 'jdk_13_latest', jdkVersion: 13, jdkVendor: '' ],
-        '1.14': [ jenkinsJdk: 'jdk_14_latest', jdkVersion: 14, jdkVendor: '' ],
-        '1.15': [ jenkinsJdk: 'jdk_15_latest', jdkVersion: 15, jdkVendor: '' ],
-        '1.16': [ jenkinsJdk: 'jdk_16_latest', jdkVersion: 16, jdkVendor: '' ],
+        '1.8': [ jenkinsJdk: 'jdk_1.8_latest', jdkVersion: 8, jdkVendor: '' ],
+        '1.11': [ jenkinsJdk: 'jdk_11_latest', jdkVersion: 11, jdkVendor: '' ],
         '1.17': [ jenkinsJdk: 'jdk_17_latest', jdkVersion: 17, jdkVendor: '' ],
         '1.18': [ jenkinsJdk: 'jdk_18_latest', jdkVersion: 18, jdkVendor: '' ],
         '1.19': [ jenkinsJdk: 'jdk_19_latest', jdkVersion: 19, jdkVendor: '' ],
+        '1.20': [ jenkinsJdk: 'jdk_20_latest', jdkVersion: 20, jdkVendor: '' ],
+        '1.21': [ jenkinsJdk: 'jdk_21_latest', jdkVersion: 21, jdkVendor: '' ],
+        '1.22': [ jenkinsJdk: 'jdk_22_latest', jdkVersion: 22, jdkVendor: '' ],
+        '1.23': [ jenkinsJdk: 'jdk_23_latest', jdkVersion: 23, jdkVendor: '' ],
+        '1.24': [ jenkinsJdk: 'jdk_24_latest', jdkVersion: 24, jdkVendor: '' ],
         'OpenJDK 1.8': [ jenkinsJdk: 'adoptopenjdk_hotspot_8u282', jdkVersion: 8, jdkVendor: 'adoptopenjdk' ],
         'IBMJDK': [ jenkinsJdk: 'ibmjdk_1.8.0_261', jdkVersion: 8, jdkVendor: 'ibm' ]
 ]
@@ -194,9 +189,9 @@ def apicheckDesc = '''
 
 def sonarDesc = '''
 <p>
-<b><a href="lastSuccessfulBuild/findbugsResult/" target="_blank">Findbugs report of latest build</a></b> -
+<b><a href="lastSuccessfulBuild/spotbugs/" target="_blank">Spotbugs report of latest build</a></b> -
 <b><a href="https://sonarcloud.io/dashboard?id=poi-parent" target="_blank">Sonar reports</a></b> -
-<b><a href="lastSuccessfulBuild/artifact/build/coverage/index.html" target="_blank">Coverage of latest build</a></b>
+<b><a href="lastSuccessfulBuild/jacoco/" target="_blank">Coverage of latest build</a></b>
 </p>
 '''
 
@@ -244,6 +239,8 @@ def shellCmdsWin =
 svn status
 :: make sure no changed module-class-files are lingering on
 svn revert poi*\\src\\*\\java9\\module-info.*
+:: also revert some files directly as the wildcard-based revert seems to fail sometimes
+svn revert poi\\src\\main\\java9\\module-info.class poi\\src\\test\\java9\\module-info.class poi-examples\\src\\main\\java9\\module-info.class poi-excelant\\src\\main\\java9\\module-info.class poi-excelant\\src\\test\\java9\\module-info.class poi-integration\\src\\test\\java9\\module-info.class poi-ooxml\\src\\main\\java9\\module-info.class poi-ooxml\\src\\test\\java9\\module-info.class poi-ooxml-full\\src\\main\\java9\\module-info.class poi-ooxml-lite\\src\\main\\java9\\module-info.class poi-ooxml-lite\\src\\main\\java9\\module-info.java poi-ooxml-lite-agent\\src\\main\\java9\\module-info.class poi-scratchpad\\src\\main\\java9\\module-info.class poi-scratchpad\\src\\test\\java9\\module-info.class src\\resources\\ooxml-lite-report.clazz src\\resources\\ooxml-lite-report.xsb
 
 :: print out information about which exact version of java we are using
 echo Java-Home: %JAVA_HOME%
@@ -276,11 +273,6 @@ poijobs.each { poijob ->
         environmentVariables {
             env('LANG', 'en_US.UTF-8')
             env('CI_BUILD', 'TRUE')
-            if(jdkKey == '1.10') {
-                // when using JDK 9/10 for running Ant, we need to provide more modules for the forbidden-api-checks task
-                // on JDK 11 and newer there is no such module any more, so do not add it here
-                env('ANT_OPTS', '--add-modules=java.xml.bind --add-opens=java.xml/com.sun.org.apache.xerces.internal.util=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED')
-            }
             env('FORREST_HOME', poijob.windows ? 'f:\\jenkins\\tools\\forrest\\latest' : '/home/jenkins/tools/forrest/latest')
         }
 
@@ -310,50 +302,15 @@ poijobs.each { poijob ->
         }
         jdk(jdkMapping.get(jdkKey).jenkinsJdk)
         scm {
-            if (poijob.githubpr) {
-                git {
-                    remote {
-                        github('apache/poi')
-                        refspec('+refs/pull/*:refs/remotes/origin/pr/*')
-                    }
-                    branch('${sha1}')
-                }
-            } else {
-                svn(svnBase) { svnNode ->
-                    svnNode / browser(class: 'hudson.scm.browsers.ViewSVN') /
-                            url << 'https://svn.apache.org/viewcvs.cgi/?root=Apache-SVN'
-                }
+            svn(svnBase) { svnNode ->
+                svnNode / browser(class: 'hudson.scm.browsers.ViewSVN') /
+                        url << 'https://svn.apache.org/viewcvs.cgi/?root=Apache-SVN'
             }
         }
         checkoutRetryCount(3)
 
-        if (poijob.githubpr) {
-            throttleConcurrentBuilds {
-                maxPerNode(1)
-                maxTotal(1)
-            }
-            parameters {
-                /* plugin not available:
-                gitParam('sha1') {
-                    description('Pull request')
-                    type('BRANCH')
-                }*/
-                stringParam('sha1', 'origin/pr/9/head', 'Provide a branch-spec, e.g. origin/pr/9/head')
-            }
-            triggers {
-                pullRequestBuildTrigger()
-                /*githubPullRequest {
-                    admins(['centic9', 'poi-benchmark', 'tballison', 'gagravarr', 'onealj', 'pjfanning', 'Alain-Bearez'])
-                    userWhitelist(['centic9', 'poi-benchmark', 'tballison', 'gagravarr', 'onealj', 'pjfanning', 'Alain-Bearez'])
-                    orgWhitelist(['apache'])
-                    cron('H/5 * * * *')
-                    triggerPhrase('OK to test')
-                }*/
-            }
-        } else {
-            triggers {
-                scm(trigger)
-            }
+        triggers {
+            scm(trigger)
         }
 
         def shellcmds = (poijob.windows ? shellCmdsWin : shellCmdsUnix).replace('POIJOBSHELL', poijob.shell ?: '')
@@ -385,7 +342,7 @@ poijobs.each { poijob ->
 
                 gradle {
                     switches('-PenableSonar')
-                    switches('-Dsonar.login=${POI_SONAR_TOKEN}')
+                    switches('-Dsonar.token=${POI_SONAR_TOKEN}')
                     switches('-Dsonar.organization=apache')
                     switches('-Dsonar.projectKey=poi-parent')
                     switches('-Dsonar.host.url=https://sonarcloud.io')
@@ -396,26 +353,26 @@ poijobs.each { poijob ->
                     tasks('clean')
                     tasks('check')
                     tasks('jacocoTestReport')
-                    tasks('sonarqube')
+                    tasks('sonar')
                     useWrapper(true)
                 }
             }
             publishers {
-				// in archive, junit and jacoco publishers, matches beneath build/*/build/... are for Gradle-build results
-				archiveArtifacts('build/dist/*.tar.gz,*/build/reports/**,poi-integration/build/test-results/**,*/build/libs/*.jar')
-				archiveJunit('*/build/test-results/**/TEST-*.xml') {
-					testDataPublishers {
-						publishTestStabilityData()
-					}
-				}
-				jacocoCodeCoverage {
-					classPattern('*/build/classes')
-					execPattern('*/build/*.exec,*/build/jacoco/*.exec')
-					sourcePattern('*/src/main/java')
-					exclusionPattern('com/microsoft/**,org/openxmlformats/**,org/etsi/**,org/w3/**,schemaorg*/**,schemasMicrosoft*/**,org/apache/poi/hdf/model/hdftypes/definitions/*.class,org/apache/poi/hwpf/model/types/*.class,org/apache/poi/hssf/usermodel/DummyGraphics2d.class,org/apache/poi/sl/draw/binding/*.class')
-				}
+                // in archive, junit and jacoco publishers, matches beneath build/*/build/... are for Gradle-build results
+                archiveArtifacts('build/dist/*.tar.gz,*/build/reports/**,poi-integration/build/test-results/**,*/build/libs/*.jar')
+                archiveJunit('*/build/test-results/**/TEST-*.xml') {
+                    testDataPublishers {
+                        publishTestStabilityData()
+                    }
+                }
+                jacocoCodeCoverage {
+                    classPattern('*/build/classes')
+                    execPattern('*/build/*.exec,*/build/jacoco/*.exec')
+                    sourcePattern('*/src/main/java')
+                    exclusionPattern('com/microsoft/**,org/openxmlformats/**,org/etsi/**,org/w3/**,schemaorg*/**,schemasMicrosoft*/**,org/apache/poi/hdf/model/hdftypes/definitions/*.class,org/apache/poi/hwpf/model/types/*.class,org/apache/poi/hssf/usermodel/DummyGraphics2d.class,org/apache/poi/sl/draw/binding/*.class')
+                }
 
-				if (!poijob.skipcigame) {
+                if (!poijob.skipcigame) {
                     configure { project ->
                         project / publishers << 'hudson.plugins.cigame.GamePublisher' {}
                     }
@@ -436,7 +393,11 @@ poijobs.each { poijob ->
                     }
 
                     gradle {
-                        tasks('clean jenkins')
+                        if (poijob.jenkinsLite) {
+                            tasks('clean jenkinsLite')
+                        } else {
+                            tasks('clean jenkins')
+                        }
                         useWrapper(true)
                         if (poijob.noScratchpad) {
                             switches('-Pscratchpad.ignore=true')
@@ -453,44 +414,51 @@ poijobs.each { poijob ->
                 } else {
                     ant {
                         targets(['clean', 'jenkins'] + (poijob.properties ?: []))
-                        prop('coverage.enabled', true)
+                        prop('coverage.enabled', !poijob.skipSpotbugs)
                         // Properties did not work, so I had to use targets instead
                         //properties(poijob.properties ?: '')
                         antInstallation(antRT)
                     }
-                    ant {
-                        targets(['run'] + (poijob.properties ?: []))
-                        buildFile('poi-integration/build.xml')
-                        // Properties did not work, so I had to use targets instead
-                        //properties(poijob.properties ?: '')
-                        antInstallation(antRT)
+                    if(!poijob.skipSourceBuild) {
+                        ant {
+                            targets(['run'] + (poijob.properties ?: []))
+                            buildFile('poi-integration/build.xml')
+                            // Properties did not work, so I had to use targets instead
+                            //properties(poijob.properties ?: '')
+                            antInstallation(antRT)
+                        }
                     }
                 }
             }
             publishers {
-                recordIssues {
-                    tools {
-                        spotBugs {
-                            pattern('*/build/reports/spotbugs/*.xml')
-                            reportEncoding('UTF-8')
+                if (!poijob.skipSpotbugs) {
+                    recordIssues {
+                        tools {
+                            spotBugs {
+                                pattern('*/build/reports/spotbugs/*.xml')
+                                reportEncoding('UTF-8')
+                            }
                         }
                     }
                 }
                 // in archive, junit and jacoco publishers, matches beneath build/*/build/... are for Gradle-build results
-                archiveArtifacts('build/dist/*.zip,build/dist/*.tgz,build/dist/maven/*/*.jar,build/coverage/**,build/hs_err*.log')
+                archiveArtifacts('build/dist/*.zip,build/dist/*.tgz,build/dist/maven/*/*.jar,build/dist/maven/*/*.pom,build/dist/maven/*/*.asc,build/dist/maven/*/*.sha256,build/dist/maven/*/*.sha512,build/coverage/**,*/build/reports/*.bom.*,build/hs_err*.log')
+                /* this plugin is currently missing on the Apache Jenkins instance
                 warnings(['Java Compiler (javac)', 'JavaDoc Tool'], null) {
                     resolveRelativePaths()
-                }
+                } */
                 archiveJunit('*/build/test-results/**/TEST-*.xml') {
                     testDataPublishers {
                         publishTestStabilityData()
                     }
                 }
-                jacocoCodeCoverage {
-                    classPattern('*/build/classes')
-                    execPattern('*/build/*.exec,*/build/jacoco/*.exec')
-                    sourcePattern('*/src/main/java')
-                    exclusionPattern('com/microsoft/**,org/openxmlformats/**,org/etsi/**,org/w3/**,schemaorg*/**,schemasMicrosoft*/**,org/apache/poi/hdf/model/hdftypes/definitions/*.class,org/apache/poi/hwpf/model/types/*.class,org/apache/poi/hssf/usermodel/DummyGraphics2d.class,org/apache/poi/sl/draw/binding/*.class')
+                if (!poijob.skipSpotbugs) {
+                    jacocoCodeCoverage {
+                        classPattern('*/build/classes')
+                        execPattern('*/build/*.exec,*/build/jacoco/*.exec')
+                        sourcePattern('*/src/main/java')
+                        exclusionPattern('com/microsoft/**,org/openxmlformats/**,org/etsi/**,org/w3/**,schemaorg*/**,schemasMicrosoft*/**,org/apache/poi/hdf/model/hdftypes/definitions/*.class,org/apache/poi/hwpf/model/types/*.class,org/apache/poi/hssf/usermodel/DummyGraphics2d.class,org/apache/poi/sl/draw/binding/*.class')
+                    }
                 }
 
                 if (!poijob.skipcigame) {
@@ -502,15 +470,6 @@ poijobs.each { poijob ->
             }
         }
 
-
-        if (poijob.githubpr) {
-            configure {
-                it / 'properties' << 'com.cloudbees.jenkins.plugins.git.vmerge.JobPropertyImpl'(plugin: 'git-validated-merge') {
-                    credentialsId('ASF_Cloudbees_Jenkins_ci-builds')
-                    postBuildPushFailureHandler(class: 'com.cloudbees.jenkins.plugins.git.vmerge.pbph.PushFailureIsFailure')
-                }
-            }
-        }
     }
 }
 
@@ -534,11 +493,8 @@ xmlbeansjobs.each { xjob ->
         label(slaves)
         environmentVariables {
             env('LANG', 'en_US.UTF-8')
-            if(jdkKey == '1.10') {
-                // when using JDK 9/10 for running Ant, we need to provide more modules for the forbidden-api-checks task
-                // on JDK 11 and newer there is no such module any more, so do not add it here
-                env('ANT_OPTS', '--add-modules=java.xml.bind --add-opens=java.xml/com.sun.org.apache.xerces.internal.util=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED')
-            } else if (jdkKey == '1.11' || jdkKey == '1.12' || jdkKey == '1.13' || jdkKey == '1.14' || jdkKey == '1.15' || jdkKey == '1.16' || jdkKey == '1.17' || jdkKey == '1.18' || jdkKey == '1.19') {
+            if (jdkKey == '1.11' || jdkKey == '1.17'
+                    || jdkKey == '1.18' || jdkKey == '1.19' || jdkKey == '1.20' || jdkKey == '1.21') {
                 env('ANT_OPTS', '--add-opens=java.xml/com.sun.org.apache.xerces.internal.util=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED')
             }
             // will be needed for forbidden-apis-check: env('ANT_HOME', xjob.windows ? 'f:\\jenkins\\tools\\ant\\latest' : '/usr/share/ant')
@@ -584,7 +540,7 @@ xmlbeansjobs.each { xjob ->
             gradle {
                 if (xjob.sonar) {
                     switches('-PenableSonar')
-                    switches('-Dsonar.login=${POI_SONAR_TOKEN}')
+                    switches('-Dsonar.token=${POI_SONAR_TOKEN}')
                     switches('-Dsonar.organization=apache')
                     switches('-Dsonar.projectKey=apache_xmlbeans')
                     switches('-Dsonar.host.url=https://sonarcloud.io')
@@ -597,17 +553,18 @@ xmlbeansjobs.each { xjob ->
                 tasks('jenkins')
                 tasks('jacocoTestReport')
                 if (xjob.sonar) {
-                    tasks('sonarqube')
+                    tasks('sonar')
                 }
                 useWrapper(true)
             }
         }
         publishers {
-            archiveArtifacts('build/libs/xmlbeans*.jar,build/distributions/*,build/hs_err*.log')
+            archiveArtifacts('build/libs/xmlbeans*.jar,build/distributions/*,build/reports/*.bom.*,build/hs_err*.log')
 
+            /* this plugin is currently missing on the Apache Jenkins instance
             warnings(['Java Compiler (javac)', 'JavaDoc Tool'], null) {
                 resolveRelativePaths()
-            }
+            } */
             archiveJunit('build/test-results/test/TEST-*.xml') {
                 testDataPublishers {
                     publishTestStabilityData()
@@ -656,59 +613,55 @@ Unfortunately we often see builds break because of changes/new machines...''')
     axes {
         jdk(
                 'jdk_1.8_latest',
-                'jdk_10_latest',
                 'jdk_11_latest',
-                /* don't look for JDKs that are out of support
-                'jdk_12_latest',
-                'jdk_13_latest',
-                'jdk_14_latest',
-                'jdk_15_latest',
-                'jdk_16_latest',*/
                 'jdk_17_latest',
-                'jdk_18_latest',
-                'jdk_19_latest',
+                'jdk_21_latest',
+                'jdk_22_latest',
+                'jdk_23_latest',
+                'jdk_24_latest',
                 'adoptopenjdk_hotspot_8u282',
                 'ibmjdk_1.8.0_261'
         )
-        // Note H50 is reserved according to it's node-descripion
-        label('Nodes','H22','H23','H24','H25','H26','H27','H28','H29','H30','H31','H32','H33','H34','H35','H36','H37','H38','H39','H40','H41','H42','H43','H44','H48','lucene1','lucene2','master')
+        // Note H50 is reserved according to its node-description
+        label('Nodes','builds22','builds23','builds24','builds25','builds26','builds27','builds28','builds29','builds30','builds31','builds32','builds33','builds34','builds35','builds36','builds37','builds38','builds39','builds40','builds50','builds56','builds57','builds58','builds59','builds60',
+                'jenkins-win-azr-1','jenkins-win-azr-2','jenkins-win-azr-3','jenkins-win-azr-4','jenkins-win-azr-5','jenkins-win-azr-6','jenkins-win-azr-7','jenkins-win-azr-8','jenkins-win-azr-10','jenkins-win-azr-11','jenkins-win-azr-12')
     }
     steps {
         conditionalSteps {
             condition {
-				fileExists('/usr', BaseDir.WORKSPACE)
-			}
-			runner('DontRun')
-			steps {
-				shell(
-						'''which svn || true
+                fileExists('/usr', BaseDir.WORKSPACE)
+            }
+            runner('DontRun')
+            steps {
+                shell(
+                        '''which svn || true
 which javac
 javac -version
 echo '<?xml version="1.0"?><project name="POI Build" default="test"><target name="test"><echo>Using Ant: ${ant.version} from ${ant.home}</echo></target></project>' > build.xml
 ''')
-				ant {
-					antInstallation(defaultAnt)
-				}
+                ant {
+                    antInstallation(defaultAnt)
+                }
 
-				shell(
-						'''which mvn || true
+                shell(
+                        '''which mvn || true
 mvn -version || true
 echo '<project><modelVersion>4.0.0</modelVersion><groupId>org.apache.poi</groupId><artifactId>build-tst</artifactId><version>1.0.0</version></project>' > pom.xml
 ''')
-				maven {
-					goals('package')
-					mavenInstallation(defaultMaven)
-				}
-			}
+                maven {
+                    goals('package')
+                    mavenInstallation(defaultMaven)
+                }
+            }
         }
         conditionalSteps {
             condition {
-				fileExists('c:\\windows', BaseDir.WORKSPACE)
-			}
-			runner('DontRun')
-			steps {
-				batchFile(
-							'''@echo off
+                fileExists('c:\\windows', BaseDir.WORKSPACE)
+            }
+            runner('DontRun')
+            steps {
+                batchFile(
+                        '''@echo off
 echo .
 where javac.exe
 echo .
@@ -716,10 +669,10 @@ javac -version
 echo .
 echo ^<?xml version=^"1.0^"?^>^<project name=^"POI Build^" default=^"test^"^>^<target name=^"test^"^>^<echo^>Using Ant: ${ant.version} from ${ant.home}, ant detected Java ${ant.java.version} (may be different than actual Java sometimes...), using Java: ${java.version}/${java.runtime.version}/${java.vm.version}/${java.vm.name} from ${java.vm.vendor} on ${os.name}: ${os.version}^</echo^>^</target^>^</project^> > build.xml
 ''')
-				ant {
-					antInstallation(defaultAntWindows)
-				}
-			}
+                ant {
+                    antInstallation(defaultAntWindows)
+                }
+            }
         }
     }
 }
